# clu

./: .editorconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  Justfile  Makefile  README.md  cli  clu.1  clu.1.adoc  clu.1.md  common.mk  go.mod  go.sum  hwidc.py  justfile  main.go  main.py  pyproject.toml  test_call.py
.github/: dependabot.yaml
.github/workflows/: build-deb.yaml  build-release.yaml  build-rpm-el7.yaml  build-rpm.yaml  macos-brew.yaml  release.yaml
DEBIAN/: control
cmd/: main.go  main_test.go  run_test.go
cmd/clu/: logging.go  main.go  main_test.go
cmd/pflag/: main.go
cmd2/: logging.go  main.go
cmd2/global/: about.go  appinfo.go  buildinfo.go
debian/: changelog  control  copyright  rules
examples/cli1/: main.go
examples/cli2/: main.go
examples/cliv1/: README.md  main.go  main_test.go
examples/cliv3/: README.md  main.go  main_test.go
examples/kong/: README.md  main.go  main_test.go
future/: __about__.py  __init__.py  cli.py  config.py  normalize.py  output.py
notes/: TODO.md  act-workflow.md  cspell.config.yaml  file-locations.md  gh-workflows.txt  go-command-limits.go  go-enums.md  go-package-ideas.txt  go-project-layout.md  go-snippets.txt  go-static.md  os-and-distro.md  regexes.md  saltstack.md  similar-tools.md  uname-results.md
notes/d42/: d42.md  d42_query.py  host3.json  python_ssl_test.py
notes/future/: build_workflow.yaml  file-locations.md  gentoo  gentoo.md  go-errors.md  imds.md  macos.md  network.md  nvme.md  os-and-distro.md  output.py  pre-commit.md  pytest.md  ram.txt  saltstack.md  testing.md  tui.examples  uptime.py  urllib.md
notes/manpage/: pkg.8
notes/mockery/: file.py
notes/runs/: g_vm  windows-vdi.txt
oldpkg/: facts.go  facts_test.go
oldpkg/sources/: clu.go  uname.go
pkg/: about.go  cli.go  config.go  config2.go  conversions.go  conversions_test.go  di.go  facts.go  input.go  mock_input.go  provides.go  requires.go
pkg/cmd/: archive.go  report.go
pkg/facts/: darwin.go  freebsd.go  linux.go  opsys.go  provides.go  requires.go  windows.go
pkg/global/: about.go  appinfo.go  buildinfo.go  config.go
pkg/input/: conversions.go  conversions_test.go  di.go  input.go  mock_input.go
pkg/opsys/: darwin.go  linux.go  opsys.go
pkg/source/: clu.go  clu_test.go  dnf_checkupdate_test.go  ip_addr.go  ip_addr_test.go  lscpu.go  lsmem_test.go  macos_name_test.go  no_salt_test.go  os_release.go  os_release_test.go  proc_cpuinfo_test.go  proc_uptime.go  selinux.go  sys_dmi_test.go  system_version_plist.go  system_version_plist_test.go  udevadm_ram.go  udevadm_ram_test.go  uname.go  uptime.go  virt_what.go  virt_what_test.go
pkg/sources/: clu.go  clu_test.go  dnf_checkupdate.go  dnf_checkupdate_test.go  ip_addr.go  ip_addr_test.go  ipmitool.go  ipmitool_test.go  (+30 more)
redhat/: README.md  README.md.txt  clu.spec
scripts/: build-deb.sh  build-rpm.sh  build.sh  debbuild.sh  get-version.sh  rpmbuild.sh
sources/: facts.go  facts_test.go
testdata/: clu_antiva.algieba-kg.org.tgz  clu_lanfear.tgz
tests/: __init__.py  conftest.py  test_conversions.py  test_deep_copy.py  test_parse_clu.py  test_parse_cpuinfo_flags.py  test_parse_ipmitool.py  test_parse_lscpu.py  test_parse_macos_name.py  test_parse_no_salt.py  test_parse_os_darwin.py  test_parse_os_linux.py  test_parse_os_release.py  test_parse_proc_uptime.py  test_parse_selinux.py  test_parse_sw_vers.py  test_parse_sys_dmi.py  test_parse_udevadm_ram.py  test_parse_uname.py  test_parse_uptime.py  test_parse_virt_what.py
(+282 files in other folders)
