[project]
name = "clu"
version = "0.1.0"
description = "clu describes the os and hardware of a system."
readme = "README.md"
authors = [
    { name = "Hunter Matthews", email = "hunter.matthews@nih.gov" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",

    "Private :: Do Not Upload",
]

requires-python = ">=3.8"

dependencies = [

]
