[project]
name        = "clu"
version     = "0.1.0"
description = "clu describes the os and hardware of a system."


authors = [
    { name = "Hunter Matthews", email = "hunter.matthews@nih.gov" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",

    "Private :: Do Not Upload",
]
dependencies = [
]
readme = "README.md"
requires-python = ">=3.8"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.5",
]

[project.scripts]
clu = "clu.cli:main"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/clu",
]
