[project]
name        = "clu"
version     = "0.99"
description = "clu describes the os and hardware of a system."
license     = "Apache-2.0"

authors = [
    { name = "Hunter Matthews", email = "hunter.matthews@nih.gov" },
]


classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",

    "Private :: Do Not Upload",
]
dependencies = [
]
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
repository = "https://github.com/huntermatthews/clu.git"
issues     = "https://github.com/huntermatthews/clu/issues"


[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pre-commit>=3.5.0",
    "pytest>=8.3.5",
    "ruff>=0.12.7",
]

[project.scripts]
clu = "clu.cli:main"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/clu",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = [
    "E501",
]

## This is the goal lint rules (for now):
# [tool.ruff.lint]
# select = [
#     # pycodestyle
#     "E",
#     # Pyflakes
#     "F",
#     # pyupgrade
#     "UP",
#     # flake8-bugbear
#     "B",
#     # flake8-simplify
#     "SIM",
#     # isort
#     "I",
# ]

# [tool.ruff]
# # Exclude a variety of commonly ignored directories.
# exclude = [
#     ".direnv",
#     ".git",
#     ".mypy_cache",
#     ".pytest_cache",
#     ".ruff_cache",
#     ".venv",
#     ".vscode",
#     "build",
#     "dist",
# ]
